# 123

./: README.md
matlab/LQR受控等效模型/: README.md  build_tail_disabled_closed_loop_model.m  tail_disabled_closed_loop_model.mat
matlab/尾巴失能/: README.md  compute_lqr_tail_disabled_theta0.m  dynamics_v2.mat  lqr_tail_disabled_theta0_fitting_results.mat  lqr_tail_disabled_theta0_results.mat
matlab/尾巴离地/: apply_kinematics_v2.m  compute_lqr_v2.m  dynamics_new_coords.mat  lqr_fitting_results.mat
matlab/尾巴触地/: compute_lqr_v2.m  dynamics_new_coords.mat  (+7 more)
上位机/: read_usb_log.m  usb_data_logger.py  使用说明.md
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/: CMakeLists.txt  package.xml
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/config/: imu_udp_sender.yaml  udp_command_receiver.yaml
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/docs/: udp_host_interface.txt
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/include/: packet_typedef.hpp  standard_robot_pp_ros1.hpp
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/launch/: standard_robot_pp_ros1.launch  system_integration.launch  udp_bridge.launch
分布式解算控制程序/子机程序/standard_robot_pp_ros2-main/src/standard_robot_pp_ros1/src/: crc8_crc16.cpp  main.cpp  standard_robot_pp_ros1.cpp
单片机/: README.md
毕业设计/: control_block_diagrams_preview.aux  control_block_diagrams_preview.tex  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  main.xdv
(+422 files in other folders)
